fixed alignment libraries

--- a/client/src/components/LibraryList.scss
+++ b/client/src/components/LibraryList.scss
@@ -24,7 +24,7 @@
     @media (min-width: 900px) {
       width: 80vw;
       max-width: 80vw;
-      // margin: 0 auto;
+      margin: 0 auto;
       border-bottom: 1px solid black;
     }
   }
