--- a/client/src/pages/UserLibrariesPage.scss
+++ b/client/src/pages/UserLibrariesPage.scss
@@ -9,7 +9,8 @@
   }
 
   @media (min-width: 900px) {
-    max-width: 80vw;
+    max-width: 100vw;
+
     margin: 0 auto;
   }
 
@@ -24,7 +25,8 @@
     display: flex;
     width: 100vw;
     height: 95vh;
-    margin: 0;
+    margin: 0 auto;
+
     .library-empty-state {
       margin: auto auto;
       width: 80vw;
